--- a/NEWS.txt
+++ b/NEWS.txt
@@ -6,18 +6,18 @@
 News
 ====
 
-0.2a1
+0.2
 -----
 
-*Release date: UNRELEASED*
+*Release date: 29-Oct-2012*
 
-* Example news entry for the in-development version
+* Allow command-line configuration of media player (Calum Eadie)
 
 
 0.1
 ---
 
-*Release date: 15-Mar-2010*
+*Release date: 29-Feb-2012*
 
-* Example news entry for a released version
+* Initial version
 
