Adds License information to manpage

--- a/yt.1
+++ b/yt.1
@@ -1,4 +1,4 @@
-.TH YT "1"
+.TH YT "1" "September 2013" "YT(1)" "User Commands"
 .SH NAME
 .PP
 yt \- a command\-line youtube client
@@ -25,8 +25,8 @@ YouTube client for the Raspberry Pi.
                         NOTE: This flag is ignored when using omxplayer (default: False)
 .TP
 \fB\-\-bandwidth\fR\ BANDWIDTH
-                        Choose prefered minimum video quality. This value will be prefered
-                        be prefered video quality and will increment up if chosen setting
+                        Choose preferred minimum video quality. This value will be preferred
+                        be preferred video quality and will increment up if chosen setting
                         is unavailable.  Example: "--bandwidth 5" will try and use codec
                         #5 (240p) and if unavailable, will step up to codec #18 (270p/360p).
                         Valid choices from low to high are "17, 5, 18, 43" (default: None)
@@ -51,10 +51,7 @@ Bugs and suggestions should be reported at:
 <https://github.com/rjw57/yt/issues>
 .SH COPYRIGHT
 .PP
-yt is released into license here by the copyright holders.
-.PP
-This README file was originally written by Rich Wareham
-(<https://github.com/rjw57>) and is likewise released into license here.
+yt is released into MIT license by the copyright holders.
 .SH AUTHOR
 Initial coding, and main maintenance is done by
 Rich Wareham <rjw57@cantab.net>.
